# parallel_jacobi

./: .gitignore  CMakeLists.txt  README.md  rsync_exclude.txt
include/: common.hpp  solvers.h  solvers.hpp  task_pool.h  timer.hpp
src/: boh  jacobi_alter_ff.cpp  jacobi_alter_native.cpp  jacobi_alternative.cpp  jacobi_double_reduce.cpp  jacobi_ff.cpp  jacobi_native.cpp  jacobi_omp.cpp  jacobi_sequential.cpp  jacobi_task_pool.cpp  jafarm_ff.cpp  jafarm_omp.cpp  jafarm_stdcpp.cpp  jared_ff.cpp  jared_omp.cpp  main.cpp  parallel_jacobi.cpp  parallel_jacobi_native2.0.cpp  sequential.cpp  task_pool.cpp  tests.cpp
src/common/: common.hpp  measurement.cpp  tests.cpp  timer.cpp
src/cpp/: parallel_jacobi.cpp  parallel_jacobi.h
src/seq/: sequential.cpp
